welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Int(1)
 required: Boolean
	if(estSurBiscuit) vuBiscuit=1}
                                    ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit==false){
^